--- a/main.ipynb
+++ b/main.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Werksessie Retrieval Augmented Generation (RAG)\n",
+    "\n",
     "Dit is een kleine introductie voor RAG: Retrieval Augmented Generation.\n",
     "\n",
     "Rag bestaat uit 3 stappen:\n",
@@ -19,15 +21,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Stap 1 is het maken van een database. De huidige omgeving is niet bijzonder veilig, dus pakken we publieke data: de regiobeelden en plannen die [hier](https://www.dejuistezorgopdejuisteplek.nl/programmas/integraal-zorgakkoord/iza-onderdelen/regionale-samenwerking/regiobeelden-en-plannen/) te vinden zijn. Op deze pagina zijn een hoop PDF's te vinden. Om hier een zoekbare database van te kunnen maken, moeten we deze downloaden en er een textueel format van maken. Vooral die laatste stap kost veel tijd, dus het maken van de database heb ik al voor jullie gedaan.\n",
+    "## Stap 1: het maken van een database \n",
     "\n",
-    "Stap 2 is het zoekbaar maken van een database."
+    "De Kaggle omgeving is niet bijzonder veilig, dus maken we gebruik van publieke data. In dit geval de regiobeelden en plannen uit het integraal zorgakkoord. Deze zijn [hier](https://www.dejuistezorgopdejuisteplek.nl/programmas/integraal-zorgakkoord/iza-onderdelen/regionale-samenwerking/regiobeelden-en-plannen/) te vinden zijn. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Download een regioplan \n",
+    "# <curl statement om regioplan te downloaden>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Render gedownloade pdf in jupyter notebook\n",
+    "# <Python code om pdf te renderen>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Een vector database bouwen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Initialiseer een lege vector database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Lees een regioplan in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Split regioplan op in chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Voeg chunks toe aan vector database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Omdat er meer dan 100 regiobeelden en -plannen zijn hebben wij deze al vooraf gedownload en toegevoegd aan een vector database. Deze kun je via de onderstaande cell downloaden en inladen. Dit is dus exact hetzelfde proces als je net zelf hebt gedaan alleen dan voor alle regiobeelden en -plannen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Download de voorbereide vector database\n",
+    "# <curl statement om vector db te downloaden>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Laad database in geheugen\n",
+    "# <python statement voor inladen db>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stap 2: het zoeken in een database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stap 3: het genereren van een antwoord"
+   ]
   },
   {
    "cell_type": "markdown",
