--- a/workshop_notebook.ipynb
+++ b/workshop_notebook.ipynb
@@ -15,9 +15,9 @@
     "RAG is een techniek om Large Language Models (LLMs) te voorzien van externe kennis, zodat ze vragen kunnen beantwoorden over informatie die niet in hun oorspronkelijke trainingsdata zat.\n",
     "\n",
     "**Het proces bestaat uit 3 hoofdstappen:**\n",
-    "1.  **Retrieval (Ophalen):** Je stelt een vraag. Op basis van deze vraag worden de meest relevante stukjes informatie (documenten/tekstfragmenten) in een kennisdatabase (vaak een vector database) gezocht.\n",
-    "2.  **Augmentation (Verrijken):** De oorspronkelijke vraag wordt gecombineerd (verrijkt) met de gevonden informatie.\n",
-    "3.  **Generation (Genereren):** De verrijkte vraag wordt aan een LLM gegeven, die vervolgens een antwoord genereert op basis van *zowel* de oorspronkelijke vraag *als* de opgehaalde informatie.\n",
+    "1.  **Retrieval (ophalen):** Je stelt een vraag. Op basis van deze vraag worden de meest relevante stukjes informatie (documenten/tekstfragmenten) in een kennisdatabase (vaak een vector database) gezocht.\n",
+    "2.  **Augmentation (verrijken):** De oorspronkelijke vraag wordt gecombineerd (verrijkt) met de gevonden informatie.\n",
+    "3.  **Generation (genereren):** De verrijkte vraag wordt aan een LLM gegeven, die vervolgens een antwoord genereert op basis van *zowel* de oorspronkelijke vraag *als* de opgehaalde informatie.\n",
     "\n",
     "Heerlijk simpel in concept, en ontzettend krachtig als het goed werkt!\n",
     "Vandaag gaan we een duik nemen in RAG, en kijken hoe we dit kunnen toepassen."
@@ -46,12 +46,12 @@
     "# - tiktoken: Wordt gebruikt door Langchain/OpenAI voor token counting\n",
     "# - requests: Om bestanden van het web te downloaden\n",
     "# - gdown: Om bestanden van Google Drive te downloaden\n",
-    "%pip install openai langchain langchain-openai langchain_community pypdf chromadb tiktoken requests gdown -q"
+    "%pip install openai langchain langchain-openai langchain-chroma pypdf chromadb tiktoken requests gdown -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,9 +62,9 @@
     "import gdown\n",
     "from getpass import getpass\n",
     "from langchain_community.document_loaders import PyPDFLoader\n",
+    "from langchain_chroma import Chroma\n",
     "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain_community.vectorstores import Chroma"
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter"
    ]
   },
   {
@@ -198,10 +198,10 @@
     ")\n",
     "chunks = text_splitter.split_documents(pages) if pages else []\n",
     "\n",
-    "# Voeg metadata toe aan elke chunk\n",
+    "# Voeg eventueel extra metadata toe aan elke chunk\n",
     "for chunk in chunks:\n",
     "    chunk.metadata[\"document_type\"] = \"Regioplan IZA\"\n",
-    "    chunk.metadata[\"region\"] = \"Noord-Holland Noord\" \n",
+    "    chunk.metadata[\"regio\"] = \"Noord-Holland Noord\" \n",
     "\n",
     "print(f\"Document opgesplitst in {len(chunks)} chunks.\")\n",
     "print(\"\\n--- Voorbeeld chunk 16 (eerste 500 tekens): ---\")\n",
@@ -245,12 +245,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Download en unzip de voorbereide vector database\n",
-    "db_file_id = \"1keRU-ZCuC3Uv6kEcxyILh42labjMGHSv\"\n",
+    "db_file_id = \"11qu_GGtEOQibDaLIgYJMt77739_qUWyG\"\n",
     "db_zip_filename = \"prebuilt_chroma_db.zip\"\n",
     "db_persist_directory_full = \"chroma_db_regioplannen\"\n",
     "\n",
@@ -306,6 +306,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Opdracht: voeg een eigen document toe aan de vector database."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jouw code hier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check of het is gelukt, je kunt ook zonder dat dit is gelukt doorgaan.\n",
+    "assert active_vector_db, \"Lees eerst de voorbereide vector database in.\"\n",
+    "assert active_vector_db._collection.count() > 23320, \"In dit notebook kom je soms opdrachten tegen, leuk om eens te proberen voordat je verder gaat.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Stap 2: Zoeken in de Vector Database (Retrieval)\n",
     "\n",
     "Nu we een actieve vector database hebben, kunnen we de kernfunctionaliteit gebruiken: het zoeken naar relevante informatie op basis van een vraag of zoekterm.\n",
@@ -326,7 +353,7 @@
    "source": [
     "# Voorbeeld zoekopdracht\n",
     "query = \"Wat zijn de belangrijkste knelpunten in de ouderenzorg in Noord-Holland Noord?\"\n",
-    "k_results = 4  # Aantal meest relevante chunks om op te halen\n",
+    "k_results = 4  # Aantal relevante chunks om op te halen\n",
     "\n",
     "assert active_vector_db, \"Geen actieve vector database om in te zoeken.\"\n",
     "\n",
@@ -342,6 +369,63 @@
     "          f\"Pagina: {doc.metadata.get('page', 'Onbekend')}) ---\")\n",
     "    content_snippet = doc.page_content[:500] + \"...\" if len(doc.page_content) > 500 else doc.page_content\n",
     "    print(content_snippet)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Opdracht: zoek uit welke documenten er allemaal in de vector database zitten."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jouw code hier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Haal alle unieke sources op\n",
+    "sources = set()\n",
+    "for metadata in active_vector_db._collection.get(include=['metadatas'])['metadatas']:\n",
+    "    sources.add(metadata.get('source', 'Unknown') if metadata else 'Unknown')\n",
+    "\n",
+    "print(f\"Gevonden {len(sources)} unieke sources:\")\n",
+    "for source in sorted(sources):\n",
+    "    print(f\"- {source}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Opdracht: zoek uit hoe je kunt filteren op alleen regels uit het 'Subregionale ROAZ-plan Noord-Holland Noord.pdf' document."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jouw code hier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "active_vector_db.similarity_search(query, k=k_results, filter={\"source\": \"Subregionale ROAZ-plan Noord-Holland Noord.pdf\"})"
    ]
   },
   {
@@ -406,7 +490,6 @@
     "retrieved_docs = active_vector_db.similarity_search(\n",
     "    query,\n",
     "    k=k_results,\n",
-    "    # filter={\"source\": \"/Users/pepio/Downloads/transformatie-database/all_pdfs/<vul_pdf_naam-in>.pdf\"}\n",
     ")\n",
     "\n",
     "# 2. Combineer de documenten tot één context string\n",
@@ -416,6 +499,97 @@
     "prompt = rag_prompt_template.format(\n",
     "    context=context,\n",
     "    question=query\n",
+    ")\n",
+    "\n",
+    "# 4. Stuur de prompt naar het LLM en krijg een antwoord\n",
+    "response = llm.invoke(prompt)\n",
+    "\n",
+    "print(\"\\n--- Gegenereerd Antwoord: ---\")\n",
+    "print(response.content)\n",
+    "\n",
+    "# Voorbeeld van een andere vraag:\n",
+    "# print(\"\\nProbeer een andere vraag:\")\n",
+    "# query_2 = \"Wat zijn de plannen voor digitale zorg?\"\n",
+    "# print(f\"\\nAntwoord genereren voor de vraag: '{query_2}'...\")\n",
+    "# retrieved_docs_2 = active_vector_db.similarity_search(query_2, k=k_results)\n",
+    "# context_2 = \"\\n\\n\".join(doc.page_content for doc in retrieved_docs_2)\n",
+    "# prompt_2 = rag_prompt_template.format(context=context_2, question=query_2)\n",
+    "# response_2 = llm.invoke(prompt_2)\n",
+    "# print(\"\\n--- Gegenereerd Antwoord (Vraag 2): ---\")\n",
+    "# print(response_2.content)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Opdracht: probeer verschillen te vinden tussen hoe twee regioplannen een zelfde vraag beantwoorden. \n",
+    "\n",
+    "Bijv. hoe verschillen de knelpunten in de ouderenzorg tussen Noord-Holland Noord en Flevoland? \n",
+    "\n",
+    "*Tip: gebruik hiervoor de bestandnamen die je bij de vorige opdrachten hebt gevonden.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jouw code hier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definieer de RAG chain met OpenAI direct\n",
+    "\n",
+    "# Bouw een simpele prompt template voor RAG\n",
+    "rag_prompt_template = \"\"\"\\\n",
+    "Je bent een behulpzame assistent die vragen beantwoordt op basis van de gegeven context.\n",
+    "Gebruik alleen de onderstaande context om de vraag te beantwoorden.\n",
+    "Als je het antwoord niet kunt vinden in de context, zeg dat dan eerlijk.\n",
+    "\n",
+    "regio plan noord holland noord:\n",
+    "{context_a}\n",
+    "\n",
+    "regio plan flevoland:\n",
+    "{context_b}\n",
+    "\n",
+    "Vraag: {question}\n",
+    "\n",
+    "Antwoord:\"\"\"\n",
+    "\n",
+    "assert active_vector_db, \"Kan RAG niet uitvoeren: Vector database is niet beschikbaar.\"\n",
+    "assert llm, \"Kan RAG niet uitvoeren: LLM is niet beschikbaar.\"\n",
+    "\n",
+    "print(f\"\\nAntwoord genereren voor de vraag: '{query}'...\")\n",
+    "\n",
+    "# 1. Haal relevante documenten op met similarity search\n",
+    "# (Optioneel) filter op metadata\n",
+    "retrieved_docs_nhn = active_vector_db.similarity_search(\n",
+    "    query,\n",
+    "    k=k_results,\n",
+    "    filter={\"source\": \"Regiobeeld Noordholland-Noord.pdf\"}\n",
+    ")\n",
+    "retrieved_docs_flevo = active_vector_db.similarity_search(\n",
+    "    query,\n",
+    "    k=k_results,\n",
+    "    filter={\"source\": \"Regiobeeld Flevoland.pdf\"}\n",
+    ")\n",
+    "\n",
+    "# 2. Combineer de documenten tot één context string\n",
+    "context_nhn = \"\\n\\n\".join(doc.page_content for doc in retrieved_docs_nhn)\n",
+    "context_flevo = \"\\n\\n\".join(doc.page_content for doc in retrieved_docs_flevo)\n",
+    "\n",
+    "# 3. Vul de prompt template in\n",
+    "prompt = rag_prompt_template.format(\n",
+    "    context_a=context_nhn,\n",
+    "    context_b=context_flevo,\n",
+    "    question=\"Wat zijn de verschillen in de ouderenzorg tussen Noord-Holland Noord en Flevoland?\"\n",
     ")\n",
     "\n",
     "# 4. Stuur de prompt naar het LLM en krijg een antwoord\n",
