Add missing requirement

--- a/workshop_notebook.ipynb
+++ b/workshop_notebook.ipynb
@@ -46,7 +46,7 @@
     "# - tiktoken: Wordt gebruikt door Langchain/OpenAI voor token counting\n",
     "# - requests: Om bestanden van het web te downloaden\n",
     "# - gdown: Om bestanden van Google Drive te downloaden\n",
-    "%pip install openai langchain langchain-openai langchain-chroma pypdf chromadb tiktoken requests gdown -q"
+    "%pip install openai langchain langchain-openai langchain-chroma langchain-community pypdf chromadb tiktoken requests gdown -q --no-deps"
    ]
   },
   {
@@ -375,6 +375,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Zoals je ziet, haalt de similarity search de tekstfragmenten op die qua betekenis het dichtst bij de vraag liggen. Dit is de *Retrieval* stap in RAG. De kwaliteit van deze stap is cruciaal voor het uiteindelijke antwoord."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Opdracht: zoek uit welke documenten er allemaal in de vector database zitten."
    ]
   },
@@ -401,13 +408,6 @@
    "outputs": [],
    "source": [
     "# Jouw code hier"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Zoals je ziet, haalt de similarity search de tekstfragmenten op die qua betekenis het dichtst bij de vraag liggen. Dit is de *Retrieval* stap in RAG. De kwaliteit van deze stap is cruciaal voor het uiteindelijke antwoord."
    ]
   },
   {
