Redirect pip install output

--- a/workshop_notebook.ipynb
+++ b/workshop_notebook.ipynb
@@ -46,7 +46,7 @@
     "# - tiktoken: Wordt gebruikt door Langchain/OpenAI voor token counting\n",
     "# - requests: Om bestanden van het web te downloaden\n",
     "# - gdown: Om bestanden van Google Drive te downloaden\n",
-    "%pip install openai langchain langchain-openai langchain-chroma langchain-community pypdf chromadb tiktoken requests gdown -q --no-deps"
+    "%pip install openai langchain langchain-openai langchain-chroma pypdf chromadb tiktoken requests gdown langchain-community -q > /dev/null 2>&1"
    ]
   },
   {
