--- a/workshop_notebook.ipynb
+++ b/workshop_notebook.ipynb
@@ -527,14 +527,11 @@
     "4.  Relevante documenten opgehaald (Retrieval) op basis van een vraag.\n",
     "5.  De vraag en context aan een LLM gegeven om een antwoord te genereren (Generation).\n",
     "\n",
-    "**Mogelijke verbeteringen en experimenten:**\n",
-    "*   **Andere embedding modellen:** Probeer andere (open source) embedding modellen (bv. via `HuggingFaceEmbeddings` - notebook Ignace).\n",
-    "*   **Andere LLMs:** Experimenteer met o3-mini, GPT-4.5, of open source modellen zoals die van Mistral of Llama (via bv. Ollama of HuggingFace).\n",
-    "*   **Chunking strategieën:** Varieer `chunk_size` en `chunk_overlap`. Probeer andere `TextSplitter` types (bv. `SemanticChunker`).\n",
+    "**Mogelijke verbeteringen en experimenten om je resultaten NOG beter te maken:**\n",
     "*   **Retriever instellingen:** Pas het aantal opgehaalde documenten (`k`) aan. Experimenteer met andere retrieval methoden (bv. `similarity_score_threshold` of `MultiQueryRetriever`).\n",
+    "*   **Metadata gebruiken:** Probeer de retrieval stap een handje te helpen door metadata toe te voegen aan je query door een specifiek document te specificeren.\n"
+    "*   **Andere LLMs:** Experimenteer met o3-mini, GPT-4.1, of andere modellen.\n",
     "*   **Prompt Engineering:** Pas de `rag_prompt_template` aan voor betere resultaten of een andere 'tone of voice'.\n",
-    "*   **Meer data:** Voeg meer of andere soorten documenten toe aan de database.\n",
-    "*   **Error Handling:** Bouw robuustere foutafhandeling in.\n",
     "\n",
     "RAG is een krachtige techniek met veel toepassingsmogelijkheden. Hopelijk heeft deze workshop je een goed startpunt gegeven!"
    ]
