--- a/workshop_notebook.ipynb
+++ b/workshop_notebook.ipynb
@@ -527,7 +527,7 @@
     "4.  Relevante documenten opgehaald (Retrieval) op basis van een vraag.\n",
     "5.  De vraag en context aan een LLM gegeven om een antwoord te genereren (Generation).\n",
     "\n",
-    "**Mogelijke verbeteringen en experimenten om je resultaten NOG beter te maken:**\n",
+    "**Mogelijke experimenten om je resultaten NOG beter te maken:**\n",
     "*   **Retriever instellingen:** Pas het aantal opgehaalde documenten (`k`) aan. Experimenteer met andere retrieval methoden (bv. `similarity_score_threshold` of `MultiQueryRetriever`).\n",
     "*   **Metadata gebruiken:** Probeer de retrieval stap een handje te helpen door metadata toe te voegen aan je query door een specifiek document te specificeren.\n",
     "*   **Andere LLMs:** Experimenteer met o3-mini, GPT-4.1, of andere modellen.\n",
