--- a/workshop_notebook.ipynb
+++ b/workshop_notebook.ipynb
@@ -20,7 +20,8 @@
     "3.  **Generation (genereren):** De verrijkte vraag wordt aan een LLM gegeven, die vervolgens een antwoord genereert op basis van *zowel* de oorspronkelijke vraag *als* de opgehaalde informatie.\n",
     "\n",
     "Heerlijk simpel in concept, en ontzettend krachtig als het goed werkt!\n",
-    "Vandaag gaan we een duik nemen in RAG, en kijken hoe we dit kunnen toepassen."
+    "Vandaag gaan we een duik nemen in RAG, en kijken hoe we dit kunnen toepassen.\n",
+    "P.S.: We moedigen je aan om ChatGPT erbij te pakken als je vindt dat een concept wat meer diepgang verdient!"
    ]
   },
   {
