--- a/workshop_notebook.ipynb
+++ b/workshop_notebook.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "Heerlijk simpel in concept, en ontzettend krachtig als het goed werkt!\n",
     "Vandaag gaan we een duik nemen in RAG, en kijken hoe we dit kunnen toepassen.\n",
-    "P.S.: We moedigen je aan om ChatGPT erbij te pakken als je vindt dat een concept wat meer diepgang verdient!"
+    "P.S.: We moedigen je aan om ChatGPT erbij te pakken als je vindt dat een concept wat meer diepgang verdient!\n",
    ]
   },
   {
